Organizando os arquivos

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Máquina de Doces</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="assets/styles/style.css">
 </head>
 <body>
   <h1>Máquina de Doces</h1>
@@ -22,19 +22,19 @@
   <div class="produtos">
     <h2>Produtos:</h2>
     <div class="produto">
-      <img src="img\fini.jpg" alt="Fini">
+      <img src="assets/img/fini.jpg" alt="Fini">
       <h3>Fini</h3>
       <p>R$ 6.00</p>
       <button>Comprar</button>
     </div>
     <div class="produto">
-      <img src="img\trento.jpg" alt="Trento">
+      <img src="assets/img/trento.jpg" alt="Trento">
       <h3>Trento</h3>
       <p>R$ 7.00</p>
       <button>Comprar</button>
     </div>
     <div class="produto">
-      <img src="img\ouro.jpg" alt="Ouro-Branco">
+      <img src="assets/img/ouro.jpg" alt="Ouro-Branco">
       <h3>Ouro-Branco</h3>
       <p>R$ 8.00</p>
       <button>Comprar</button>
