--- a/index.html
+++ b/index.html
@@ -6,7 +6,11 @@
   <link rel="stylesheet" href="assets/styles/style.css">
 </head>
 <body>
-  <h1>Máquina de Doces</h1>
+  <main>
+    <div class="circulo">
+      <h1>Máquina de Doces</h1>
+    </div>
+  </main>
   <div class="visor">
     <div class="notas">
         <h2>Inserir Notas:</h2>
